# app-security

./: .gitignore  5W1H-ANALYSIS.md  Cargo.toml  Makefile  README.md
.understand-anything/tmp/: ua-import-map-input.json  ua-import-map-output.json  ua-scan-files.json
configs/: default.toml
docs/superpowers/plans/: 2026-06-19-phase1-core-foundation.md  2026-06-19-phase2a-core-dns.md
docs/superpowers/specs/: 2026-06-19-app-security-design.md  2026-06-19-phase2a-core-dns-design.md  2026-06-19-phase2b-firewall-design.md
internal/: Cargo.toml
internal/src/: lib.rs
internal/src/alert/: log.rs  mod.rs  types.rs
internal/src/core/: config.rs  event_bus.rs  manager.rs  mod.rs  mod_trait.rs  toposort.rs  validation.rs
internal/src/detection/arp/: mod.rs  monitor.rs
internal/src/network/: mod.rs
internal/src/network/dns/: config.rs  doh.rs  leak.rs  mod.rs
internal/src/network/firewall/: config.rs  mod.rs  rules.rs
internal/src/network/firewall/platform/: linux.rs  macos.rs  mod.rs  windows.rs
internal/src/network/killswitch/: mod.rs
internal/src/network/killswitch/platform/: linux.rs  macos.rs  windows.rs
internal/src/network/vpn/: config.rs  mod.rs  wireguard.rs
internal/src/platform/: mod.rs  types.rs
internal/src/platform/linux/: mod.rs
internal/src/platform/macos/: mod.rs
internal/src/platform/windows/: mod.rs
src/: lib.rs  main.rs
tests/integration/: module_lifecycle_test.rs  phase2a_test.rs  vpn_killswitch_test.rs
tests/integration/common/: mock_platform.rs  mod.rs
tests/unit/alert/: alert_test.rs
tests/unit/core/: config_test.rs  event_bus_test.rs  manager_event_dispatch_test.rs  manager_test.rs  mod_trait_test.rs  toposort_test.rs  validation_test.rs
tests/unit/detection/: arp_test.rs
tests/unit/network/: dns_leak_test.rs  dns_test.rs  firewall_test.rs  killswitch_test.rs  vpn_test.rs
tests/unit/platform/: validation_test.rs
tests/unit/platform/mocks/: mock_platform.rs
