[package]
name = "app-security"
version = "0.1.0"
edition = "2021"

[features]
default = []
pcap = ["app-security-internal/pcap"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
regex = "1"
app-security-internal = { path = "internal" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockall = "0.11"
tempfile = "3"

[[test]]
name = "mod_trait_test"
path = "tests/unit/core/mod_trait_test.rs"

[[test]]
name = "validation_test"
path = "tests/unit/core/validation_test.rs"

[[test]]
name = "event_bus_test"
path = "tests/unit/core/event_bus_test.rs"

[[test]]
name = "manager_test"
path = "tests/unit/core/manager_test.rs"

[[test]]
name = "platform_validation_test"
path = "tests/unit/platform/validation_test.rs"

[[test]]
name = "vpn_test"
path = "tests/unit/network/vpn_test.rs"

[[test]]
name = "killswitch_test"
path = "tests/unit/network/killswitch_test.rs"

[[test]]
name = "arp_test"
path = "tests/unit/detection/arp_test.rs"

[[test]]
name = "module_lifecycle_test"
path = "tests/integration/module_lifecycle_test.rs"

[[test]]
name = "vpn_killswitch_test"
path = "tests/integration/vpn_killswitch_test.rs"

[[test]]
name = "config_test"
path = "tests/unit/core/config_test.rs"

[[test]]
name = "manager_event_dispatch_test"
path = "tests/unit/core/manager_event_dispatch_test.rs"

[[test]]
name = "toposort_test"
path = "tests/unit/core/toposort_test.rs"

[[test]]
name = "dns_test"
path = "tests/unit/network/dns_test.rs"

[[test]]
name = "dns_leak_test"
path = "tests/unit/network/dns_leak_test.rs"

[[test]]
name = "firewall_test"
path = "tests/unit/network/firewall_test.rs"

[[test]]
name = "alert_test"
path = "tests/unit/alert/alert_test.rs"

[[test]]
name = "phase2a_test"
path = "tests/integration/phase2a_test.rs"
