[package]
name = "app-security-internal"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
