[package]
name = "app-security-internal"
version = "0.1.0"
edition = "2021"

[features]
default = []
pcap = ["dep:pcap"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
pcap = { version = "1.0", optional = true }
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
